--- a/src/scss/chat.scss
+++ b/src/scss/chat.scss
@@ -15,12 +15,18 @@ $spacing: 16px;
 
         right: variables.$chat-offset-right;
         width: variables.$chat-width;
+
         height: variables.$chat-height;
+        max-height: calc(100vh - 80px);
+
         background: variables.$secondary-color;
         border-radius: variables.$border-radius;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
         overflow: hidden;
         z-index: 10000;
+        transform: translateY(100%);
+        transition: transform 0.3s ease;
+        touch-action: pan-y;
 
         @include media-mixin.max_480 {
             width: variables.$chat-width-mobile;
@@ -31,6 +37,7 @@ $spacing: 16px;
         &--open {
             display: flex;
             flex-direction: column;
+            transform: translateY(0);
         }
     }
 
