--- a/src/scss/chat.scss
+++ b/src/scss/chat.scss
@@ -68,6 +68,37 @@ $spacing: 16px;
         }
     }
 
+    &__welcome-tip {
+        position: absolute;
+        left: -320px;
+        top: 50%;
+        transform: translateY(-50%);
+        background: #fff;
+        color: #333;
+        padding: 8px 12px;
+        font-size: 14px;
+        border-radius: 8px;
+        white-space: normal;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+        z-index: -1;
+        transition: left 0.4s ease-out, z-index 0s linear 0.4s;
+        opacity: 0;
+        transition: opacity 0.3s ease, left 0.4s ease-out;
+        pointer-events: none;
+        //max-width: 280px;
+        width: 280px;
+        text-align: left;
+        line-height: 1.3;
+
+        &--show {
+            // left: 70px;
+            /* Выезжаем вправо от кнопки */
+            opacity: 1;
+            z-index: 1;
+        }
+    }
+
+
     &__header {
         padding: $spacing;
         background: variables.$primary-color;
